# rust-web-push

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/simple-send/: Cargo.toml
examples/simple-send/src/: main.rs
src/: error.rs  lib.rs
src/clients/: hyper_client.rs  mod.rs  request_builder.rs
src/vapid/: builder.rs
